重构部分数据库，拆分环境暂存于推送